--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="tab-title">The Shop | The Boys Website V2</title>
+    <title id="tab-title">The Shop</title>
     <link type="text/css" rel="stylesheet" href="/data/css/standard_stylesheet.css">
     <style>
       article {
