Update navigation links in product.html

--- a/product.html
+++ b/product.html
@@ -81,7 +81,7 @@
         <p><img src="/data/images/the-shop-logo.png"></p>
         <br>
         <center>
-          <p><a href="/dashboard/the-shop" class="hl1">Home</a> | <a href="/dashboard/the-shop/cart" class="hl1">Cart</a></p>
+          <p><a href="/" class="hl1">Home</a> | <a href="/cart" class="hl1">Cart</a></p>
         </center>
         <hr>
       </div>
