--- a/product.html
+++ b/product.html
@@ -30,6 +30,7 @@
         height: 75%;
         border: 2px solid black;
         margin-right: 1px;
+        border-radius: 5px;
       }
       button.purchaseButton {
         display: block;
