Fix HTML comments for product table

--- a/product.html
+++ b/product.html
@@ -91,11 +91,11 @@
         <h1 id="productTitle">Loading...</h1>
         <p></p>
         <h3 id="productPrice">£0.00</h3>
-        <!--<table>
+        <--<table>
           <th id="decreaseQuantity">-</th>
-          <th id="quantity">0</th>
+          <th id="quantity">1</th>
           <th id="increaseQuantity">+</th>
-        </table>-->
+        </table>
         <center>
           <p>
             
