--- a/product.html
+++ b/product.html
@@ -91,7 +91,7 @@
         <h1 id="productTitle">Loading...</h1>
         <p></p>
         <h3 id="productPrice">£0.00</h3>
-        <--<table>
+        <table>
           <th id="decreaseQuantity">-</th>
           <th id="quantity">1</th>
           <th id="increaseQuantity">+</th>
