Add numbercontrol class to quantity table headers

--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
         border-collapse: collapse;
         width: auto;
       }
-      td, th {
+      .numbercontrol {
         border: 2px solid #555555;
         text-align: center;
         padding: 8px;
@@ -92,9 +92,9 @@
         <p></p>
         <h3 id="productPrice">£0.00</h3>
         <table>
-          <th id="decreaseQuantity">-</th>
-          <th id="quantity">1</th>
-          <th id="increaseQuantity">+</th>
+          <th id="decreaseQuantity" class="numbercontrol">-</th>
+          <th id="quantity" class="numbercontrol">1</th>
+          <th id="increaseQuantity" class="numbercontrol">+</th>
         </table>
         <center>
           <p>
