--- a/product.html
+++ b/product.html
@@ -58,6 +58,7 @@
         border: 2px solid #555555;
         text-align: center;
         padding: 8px;
+        cursor: pointer;
       }
       /*div.productcontainer {
         width: auto;
