--- a/product.html
+++ b/product.html
@@ -94,7 +94,7 @@
         <h3 id="productPrice">£0.00</h3>
         <table>
           <th id="decreaseQuantity" class="numbercontrol">-</th>
-          <th id="quantity" class="numbercontrol">1</th>
+          <th id="quantity">1</th>
           <th id="increaseQuantity" class="numbercontrol">+</th>
         </table>
         <center>
