--- a/product.html
+++ b/product.html
@@ -54,7 +54,12 @@
         border-collapse: collapse;
         width: auto;
       }
-      .numbercontrol {
+      .quantityIndicator {
+        border: 2px solid #555555;
+        text-align: center;
+        padding: 8px;
+      }
+      .quantitycontrol {
         border: 2px solid #555555;
         text-align: center;
         padding: 8px;
@@ -93,9 +98,9 @@
         <p></p>
         <h3 id="productPrice">£0.00</h3>
         <table>
-          <th id="decreaseQuantity" class="numbercontrol">-</th>
-          <th id="quantity">1</th>
-          <th id="increaseQuantity" class="numbercontrol">+</th>
+          <th id="decreaseQuantity" class="quantitycontrol">-</th>
+          <th id="quantity" class="quantityIndicator"1</th>
+          <th id="increaseQuantity" class="quantitycontrol">+</th>
         </table>
         <center>
           <p>
