Fix quantityIndicator header in product.html

--- a/product.html
+++ b/product.html
@@ -99,7 +99,7 @@
         <h3 id="productPrice">£0.00</h3>
         <table>
           <th id="decreaseQuantity" class="quantitycontrol">-</th>
-          <th id="quantity" class="quantityIndicator"1</th>
+          <th id="quantity" class="quantityIndicator">1</th>
           <th id="increaseQuantity" class="quantitycontrol">+</th>
         </table>
         <center>
